// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component renering and behavior should render <Input/> correctly 1`] = `
<div
  className="input-container css-7ya7e0"
>
  <label
    className="css-savvye"
  >
    Text Input
  </label>
  <input
    className="css-1pqnz1a"
    placeholder="write something"
    type="text"
  />
</div>
`;

exports[`Input component renering and behavior should render <Input/> with error 1`] = `
<div
  className="input-container css-7ya7e0"
>
  <label
    className="css-uvk7o0"
  >
    Text Input Error
  </label>
  <input
    className="css-noagsx"
    placeholder="write something"
    type="text"
  />
</div>
`;
